Fix overflow issues

--- a/css/SimplyResponsive.css
+++ b/css/SimplyResponsive.css
@@ -53,7 +53,10 @@ blockquote footer:before {
 	content: "- ";
 }
 
-code, kbd, pre, samp { font-family: "Lucida Console", Consolas, "Courier New", Courier, Monaco, monospace }
+code, kbd, pre, samp { 
+	font-family: "Lucida Console", Consolas, "Courier New", Courier, Monaco, monospace;
+	overflow: auto;
+}
 
 table { 
 	border-spacing: 0;
